--- a/backend/web/static/css/style.css
+++ b/backend/web/static/css/style.css
@@ -1,3 +1,21 @@
+body > .header .logo {
+    font-family: inherit;
+}
+
+body > .header .navbar .nav > li > a > .badge {
+    position: absolute;
+    top: 4px;
+    right: 0;
+    font-size: 75%;
+}
+
+body .navbar-nav > .notifications-menu > .dropdown-menu > li .menu > li > a > .glyphicon,
+body .navbar-nav > .notifications-menu > .dropdown-menu > li .menu > li > a > .fa,
+body .navbar-nav > .notifications-menu > .dropdown-menu > li .menu > li > a > .ion {
+    background: none;
+    color: inherit;
+}
+
 body .table {
     word-break: break-all;
 }
