--- a/frontend/web/static/css/style.css
+++ b/frontend/web/static/css/style.css
@@ -1,6 +1,12 @@
 html,
 body {
     height: 100%;
+    font-family: "Open Sans";
+    font-weight: 300;
+    font-size: 16px;
+    color: #000000;
+    -webkit-font-smoothing: antialiased;
+    -webkit-overflow-scrolling: touch;
 }
 
 .wrap {
